Updated Stucture, Removed unwanted files, Implemented Router

--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	 crossorigin="anonymous"></script>
 
-	 <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-	 <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-	 <link rel="stylesheet" href="//demo.productionready.io/main.css">
-
-
+	<link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
+	<link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
+	 rel="stylesheet" type="text/css">
+	<!--<link rel="stylesheet" href="//demo.productionready.io/main.css">-->
 
 </head>
 
@@ -32,8 +31,8 @@
 
 	<script src="./assets/js/AngularEmitter.min.js"></script>
 	<script>
-AngularEmitter();
-		</script>
+		AngularEmitter();
+	</script>
 </body>
 
 </html>
