--- a/src/index.html
+++ b/src/index.html
@@ -19,14 +19,16 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	 crossorigin="anonymous"></script>
 	-->
+	<script src="../assets/js/jquery.min.js"></script>
 	<link href="./assets/css/uikit.css" rel="stylesheet" type="text/css">
 	<link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
 	<link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
 	 rel="stylesheet" type="text/css">
-
+	<link href="../assets/css/github-gist.css" rel="stylesheet" />
 	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
-	 <script src="./assets/js/uikit.min.js"></script>
-	<script src="./assets/js/uikit-icons.min.js"></script> <!---->
+	<script src="./assets/js/uikit.min.js"></script>
+	<script src="./assets/js/uikit-icons.min.js"></script>
+	<!---->
 	<!--<link rel="stylesheet" href="//demo.productionready.io/main.css">-->
 
 </head>
@@ -36,7 +38,17 @@
 
 	<script src="./assets/js/AngularEmitter.min.js"></script>
 	<script>
-		AngularEmitter();
+		// AngularEmitter();
+	</script>
+
+	<script src="../assets/js/highlight.pack.js"></script>
+	<script>
+		// https://highlightjs.org/
+		$(document).ready(function () {
+			$('pre code').each(function (i, block) {
+				hljs.highlightBlock(block);
+			});
+		});
 	</script>
 </body>
 
