--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
+
 	<!--
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	 crossorigin="anonymous">
@@ -19,16 +20,18 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 	 crossorigin="anonymous"></script>
 	-->
+
 	<script src="../assets/js/jquery.min.js"></script>
 	<link href="./assets/css/uikit.css" rel="stylesheet" type="text/css">
 	<link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-	<link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
 	 rel="stylesheet" type="text/css">
 	<link href="../assets/css/github-gist.css" rel="stylesheet" />
+	<link href="./assets/css/uikit-override.css" rel="stylesheet" type="text/css" />
 	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	<script src="./assets/js/uikit.min.js"></script>
 	<script src="./assets/js/uikit-icons.min.js"></script>
-	<!---->
+
 	<!--<link rel="stylesheet" href="//demo.productionready.io/main.css">-->
 
 </head>
